docs(bench): band GEMM AVX2 screen results
AVX2 (i7-9750H, heavily loaded shared host) only: band arm 5.2x-10.4x
faster than the integer kernels at Granite 4.1 3B FFN prefill (batch 512,
Q4_K/Q6_K/Q8_0, MT, ST and mapped), 0.32x-0.78x at decode. Pre-registered
rule not met; stays an experiment. Dequant ablation shows scalar K-quant
dequant dominates decode. Tile 3x3 vs 4x4 unresolved (runs disagree).
Raw JMH JSON/text, host facts and load averages recorded; x86 AVX-512 and
NEON commands in the README.